resources/css/app.css
@import 'tailwindcss';

@import 'tw-animate-css';

@import './header.css';
@import './hero.css';
@import './slideshow.css';
@import './payphone-button.css';
@import './product-card.css';
@import './video-feature.css';
@import './collections-grid.css';
@import './collection-card.css';
@import './ourpromise.css';
@import './footer.css';
@import './article.css';
@import './values.css';
@import './feature_card.css';
@import './details-list.css';
@import './socials.css';
@import './payphone.css';



@plugin "@tailwindcss/typography";

@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@source '../../storage/framework/views/*.php';
@source '../**/*.blade.php';
@source '../**/*.ts';



/* @custom-variant dark (&:is(.dark *)); */



@theme inline {
    --font-sans: "Raleway", ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    --font-sans2: "Inter", ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    --font-serif: "Berkshire Swash", ui-serif, system-ui, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    --font-serif2: "Original Surfer", ui-serif, system-ui, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';

    --radius: 0.5rem;
    --radius-lg: var(--radius);
    --radius-md: calc(var(--radius) - 2px);
    --radius-sm: calc(var(--radius) - 4px);

    --color-background: var(--background);
    --color-foreground: var(--foreground);

    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);

    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);

    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);

    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);

    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);

    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);

    --color-destructive: var(--destructive);
    --color-destructive-foreground: var(--destructive-foreground);

    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);

    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);

    --color-sidebar: var(--sidebar-background);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
}

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
    *,
    ::after,
    ::before,
    ::backdrop,
    ::file-selector-button {
        border-color: var(--color-zinc-200, currentColor);
    }
}

@layer utilities {
    body,
    html {
        --font-sans:
            'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    }
}





@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background;
    }

    h1 {
        @apply text-3xl md:text-6xl font-semibold;
    }

    h2 {
        @apply text-4xl md:text-5xl font-semibold ;
    }
}

.wrapper {
    @apply w-[calc(100%_-_2.5rem)] lg:w-[calc(100%_-_4rem)] mx-auto max-w-7xl lg:justify-between;
}




.products-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 3rem;
}




.latest-products-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 2.75rem;
}

@media screen and (min-width: 768px) {
    .latest-products-grid {
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    }
}

@media screen and (min-width: 1024px) {
    .products-grid {
        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    }

    .latest-products-grid {
        grid-template-columns: 2fr 1fr;
    }
}


.checkout-grid {
    display: grid;
    grid-template-columns: 1fr;

   /*  gap: 4rem; */
}

@media screen and (min-width: 1024px) {
    .checkout-grid {

        grid-template-columns: 1fr 1fr;
        gap:4rem;

    }
}

.fi-input-wrp fi-fo-rich-editor {
    @apply h-96;
}

.form-input {
    @apply border border-zinc-400  tracking-wider selection:bg-orange-200 focus:outline-2 ring-0 h-11 ;
}

[data-required-sign]::after {
    content: '*';
    color: red;
    @apply text-3xl
}

.grid-layout:first-of-type {
    @apply w-full;
    display: grid;
    grid-template-columns: var(--cols);
    gap: 4rem;
}

.grid-layout {
    @apply w-full;
    display: grid;
    grid-template-columns: var(--cols);
    gap: 2rem;
}

.grid-layout-col {
    grid-column: var(--col-span);
}

.grid-layout-col p > img {
   @apply p-0 m-0 rounded-xl shadow-2xl border-4 border-zinc-800;
}

.for-prose {

    @apply prose md:prose-lg lg:prose-xl max-w-none text-zinc-800 ;
    @apply prose-em:font-bold prose-em:underline;

}

.for-prose h2 {
    @apply font-serif2;
}

.product-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 2rem;
}

@media screen and (min-width: 1024px) {
    .product-grid {
    display: grid;
    grid-template-columns: 1.5fr 2fr;
    gap: 2.75rem;
}
}

.section-spacing {
    @apply py-20;
}
.separator-border {
    @apply border-dashed border-b border-zinc-400 pb-10;
}

a.pagination-link {
    @apply flex  text-lg md:text-xl font-sans2 tracking-wider leading-tight;
}

span.pagination-link {
    @apply text-zinc-500 text-lg  md:text-xl tracking-wider leading-2;
}

a.pagination-link:hover {
    @apply text-orange-600;
}

